--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -357,6 +357,10 @@ p {
 	color: #777;
 }
 
+label {
+	color: #403c3c;
+}
+
 h2 {
 	line-height: 1.66;
 	margin: 0;
@@ -368,6 +372,14 @@ h2 {
 	text-transform: uppercase;
 	text-align: center;
 	margin-bottom: 40px;
+}
+
+hr {
+	border: 0.5px solid #afaaaa;
+}
+
+.fs-18 {
+	font-size: 18px;
 }
 
 .clear {
@@ -789,7 +801,7 @@ input[type=checkbox]:not(old):checked+label>span:before {
 }
 
 .modal-dialog {
-	max-width: 690px;
+	max-width: 740px;
 }
 
 .modal-footer {
@@ -971,12 +983,77 @@ ul.dropdown-menu.notifications:after {
 	background: #EFEFEF;
 }
 
+.footer-bg {
+	background: #F5F4F2;
+	border-top: 2px solid #D3D3D3;
+}
+
 .w3-height {
 	height: 85vh;
 	border-radius: 10px;
 	border: 1px solid black;
 	border: 1px solid #9e9b9b;
 	font-size: 22px;
+}
+
+.left_menu {
+	min-height: 100vh;
+	position: fixed;
+	border-right: 1px solid #efefef;
+	transition: all 0s ease-in-out;
+	background: #fff;
+}
+
+#page-content-wrapper {
+	padding-left: 226px;
+	min-height: 100vh
+}
+
+.toggled #page-content-wrapper {
+	padding-left: 0px;
+	transition: all .3s ease-in-out;
+}
+
+.react-datepicker__input-container input {
+	border: 1px solid #ddd;
+	height: 38px;
+	padding: 10px;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+
+span.input-group-text {
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border-top-left-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+
+.input-height {
+	height: 47px;
+}
+
+.h-40 {
+	height: 40px;
+}
+
+.invoicePage .css-yk16xz-control {
+	background-color: #fff !important;
+}
+
+.invoicePage .react-datepicker__input-container input {
+	width: 312px;
+	height: 40px;
+}
+
+.navbar-pos-fixed {
+	position: fixed;
+	width: calc(100% - 225px);
+	z-index: 111;
+}
+
+#page-content-wrapper .right__content {
+	padding-top: 80px;
 }
 
 @media (min-width: 768px) {
